[package]
name = "seekable-async-file"
description = "Async pread and pwrite, with optional delayed sync and metrics"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/seekable-async-file"
readme = "README.md"
keywords = ["async", "delayed", "file", "pread", "pwrite"]
repository = "https://github.com/wilsonzlin/seekable-async-file.git"
version = "0.1.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["fsync_delayed", "mmap"]
fsync_delayed = []
fsync_immediate = []
mmap = ["dep:memmap2"]
tokio_file = []
unsafe_fsync_none = [] # For benchmarking purposes only!

[dependencies]
libc = "0.2"
memmap2 = { version = "0.5", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
