[package]
name = "seekable-async-file"
description = "Async pread and pwrite, with optional delayed sync and metrics"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/seekable-async-file"
readme = "README.md"
keywords = ["async", "delayed", "file", "pread", "pwrite"]
repository = "https://github.com/wilsonzlin/seekable-async-file.git"
version = "0.5.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["mmap"]
mmap = ["dep:memmap2"]
tokio_file = []

[dependencies]
futures = "0.3"
memmap2 = { version = "0.5", optional = true }
off64 = "0.0.2"
signal-future = "0.0.1"
tokio = { version = "1", features = ["fs", "rt", "sync", "time"] }
